# celeryrepro

./: README.md  app.py  pyproject.toml  start_app.bat  start_rabbitmq.bat  start_worker.bat
