[tool.poetry]
name = "celeryrepro"
version = "0.1.0"
description = ""
authors = ["Korijn van Golen <k.vangolen@clinicalgraphics.com>"]

[tool.poetry.dependencies]
python = "^3.6"
celery = "~5.0.2"
psutil = "^5.7.3"
objgraph = "^3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
